# PatchIt

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Source/Core/: Error.cpp  Error.hpp
